# RawEdit

./: CMakeLists.txt  README.md
cmake/: deps.cmake  libraw.cmake  raylib.cmake  spdlog.cmake  stb.cmake  ui.cmake
src/: CMakeLists.txt
src/App/: CMakeLists.txt  app.cpp  app.h  imagemanager.cpp  imagemanager.h  main.cpp  raweditraylib.cpp  raweditraylib.h  utils.cpp  utils.h
src/RawEdit/: CMakeLists.txt  RawEdit.h
src/RawEdit/algorithm/: CMakeLists.txt  mask.cpp  mask.h  rescale.cpp  rescale.h
src/RawEdit/algorithm/base/: CMakeLists.txt  algorithm.h  params.h
src/RawEdit/algorithm/shaders/: emptyshader.glsl
src/RawEdit/algorithm/standard/: CMakeLists.txt  rescale.h
src/RawEdit/core/: CMakeLists.txt  common.h  error.h  image.cpp  image.h  openglimage.cpp  openglimage.h  rawimage.cpp  rawimage.h  shader.cpp  shader.h  shadermanager.cpp  shadermanager.h
src/RawEdit/image/: CMakeLists.txt  cpuimage.h  image.h  imagebase.h  mask.h
src/RawEdit/io/: CMakeLists.txt  imageloader.cpp  imageloader.h
src/RawEdit/utils/: CMakeLists.txt  cache.h  error.h  type_utils.hpp
